# pyvado

./: .gitignore  README.md  foo.py  pyproject.toml
.github/workflows/: python-tests.yml
exemples/: 1.hello_world.ipynb  2.first_circuit.ipynb  3.simulation.ipynb  4.reports.ipynb  hello_pyvado.ipynb  hello_pyvado.py
exemples/design_files/: toplevel_test_tesbench.vhd
exemples/outputs/: example_power.txt  example_power_with_activity.saif  example_uti.txt
src/pyvado/: __init__.py  pyvado.py  pyvado_error.py  pyvado_process.py  pyvado_session.py  vivadoProcess.py
src/pyvado/pyvado_manager/: __init__.py  file_manager.py  flow_manager.py  hardware_manager.py  project_manager.py  pyvado_manager.py  report_manager.py  simulation_manager.py  tcl_manager.py
tests/: test_process.py  test_pyvado.py
tests/integration_tests/: test_command.py  test_file.py  test_flow.py  test_hardware.py  test_process.py  test_project.py  test_report.py  test_session.py  test_simulator.py
tests/integration_tests/project_creation_test/: project_creation_test.xpr
tests/integration_tests/test_files/: const.xdc  foo.saif  foo1.vhd  toplevel_test.vhd
tests/integration_tests/test_report/: test_report_clock_interaction.txt  test_report_clock_network.txt  test_report_drc.txt  test_report_methodology.txt  test_report_noise.txt  test_report_operating_conditions.txt  test_report_power.txt  test_report_timing.txt  test_report_utilization.txt
tests/unit_tests/: test_command.py  test_file.py  test_flow.py  test_hardware.py  test_process.py  test_project.py  test_pyvado.py  test_report.py  test_session.py  test_simulator.py  todo.md
tests/unit_tests/test_pyvado/: test_add_file.py  test_command.py  test_open.py  test_runs.py
